--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <h2 style="color: white;">Kami akan segera hadir</h2>
             <hr>
             <h5 style="color: white;">Sales University, Sekolah Online Para TOP Achiever</h5>
-            <a href="http://" class="button-50">For Information</a>
+            <a href="https://web.whatsapp.com/send?phone=6287887217027" class="button-50">For Information</a>
         </div>
         <div class="bottomleft">
             <p style="color: black;">Sales University Powered By <a style="color: black ;"
